--- a/pzuo/website/index.html
+++ b/pzuo/website/index.html
@@ -11,7 +11,7 @@
                     <li> <a href="index.html" >Lab0 : This Homepage</a> </li>
                     <li> <a href="aboutme.html">Lab1 : About Me</a></li> 
                     <li> <a href="">Homework 1 : Grandma's Lemon Meringue Pie</a></li>
-                    <li> <a href="">Homework 2 : Movie Review</a></li>
+                    <li> <a href="tmnt.html">Homework 2 : Movie Review</a></li>
                     <li> <a href="">Lab 3 : My Music Page</a></li>
                     <li> <a href="">Homework 3 : Movie Review PHP</a></li>
                     <li> <a href="">Homework 4 : NerdLuy</a></li>
