--- a/pzuo/website/ascii.html
+++ b/pzuo/website/ascii.html
@@ -39,7 +39,13 @@
         </fieldset>
         <fieldset>
             <legend>Speed:</legend>
-            <input type="checkbox" name="turbo" value="Turbo" />Turbo
+            <label><input id="speed" type="checkbox" name="turbo" value="Turbo" />Turbo</label>
         </fieldset>
+		<p>
+		<a href="https://webster.cs.washington.edu/jslint/?referer">
+			<img src="https://webster.cs.washington.edu/w3c-js.png" alt="Valid JS" />
+		</a>
+		</p>
+
     </body>
 </html>
